@@ -3,7 +3,8 @@
  */
 
 03082007 - Fixed a comment in physfs.h. Renamed win32.c to windows.c.
-           Cleaned up whitespace/formatting in pocketpc.c
+           Cleaned up whitespace/formatting in pocketpc.c. Updated PocketPC
+           code to expect UTF-8 strings from the higher level.
 11052006 - More 7zip archiver work (thanks, Dennis!). Initial Unicode work.
            Minor BeOS realpath tweak.
 09272006 - Reworked 7zip archiver (thanks, Dennis!).
@@ -103,6 +104,10 @@
            Made bootstrap script MacOSX-friendly. Moved byteorder defines into
            physfs_internal.h ...
 01152003 - Added Portuguese (Brazil) translation (Thanks, Danny!)
+
+
+--- This is where the 1.1 development branch starts. ---
+
 12292003 - Updated CodeWarrior projects from CW6 to CW7, and made a bunch of
            patches to get the Mac Classic target building again. Removed
            zlib114 from CVS repository. Updated OS/2 build batch file.
